--- a/vignettes/basic_workflow.Rmd
+++ b/vignettes/basic_workflow.Rmd
@@ -107,7 +107,7 @@ for (i in seq_len(5)) {
 
  #validation cindex value
 cidx_result <- c( 'XGB_Cox' = concordance(y_test ~ y_xgcox_predict)$con,
-                  'XGB_Cidx' = concordance(y_test ~ y_xgcidx_predict)$con),
+                  'XGB_Cidx' = concordance(y_test ~ y_xgcidx_predict)$con,
                   'LGB_Cox' = concordance(y_test ~ y_lgcox_predict)$con,
                   'LGB_Cidx' = concordance(y_test ~ y_lgcidx_predict)$con)
 
